# opengl-hz

./: CMakeLists.txt  README.md
cmake/Modules/: Findjansson.cmake
data/: cameramatrix.txt  geom.json  glsl.frag  glsl.vert
src/: DisplaySurfaceGeometry.cpp  DisplaySurfaceGeometry.h  calib_test_glsl.c  calib_test_numpy.py  calib_test_opengl.c  calib_test_osg.cpp  calib_test_pyglet.py  calib_test_pyopengl.py  calib_test_utils.py  camera_model.cpp  camera_model.h  print_osg_extrinsic.py  projection_math.py  util.cpp  util.h
